--- a/index.html
+++ b/index.html
@@ -139,6 +139,11 @@
             <p class="description">You're welcome to explore some of my early-stage personal projects. Additional works are currently in development.</p>
             <div class="article-container">
                 <article>
+                    <h3>Personal portfolio website</h3>
+                    <p>A sleek and modern portfolio website showcasing my skills, projects, and experience in web development. Featuring a responsive design, interactive elements, and easy navigation to highlight my work, technical expertise, and contact information.</p>
+                    <a id="portfolio-link" href="https://www.dannytechstudio.com">View Project</a>
+                </article>
+                <article>
                     <h3>Password Generator</h3>
                     <p>A customizable password generator that allows users to create strong, secure passwords based on selected criteria like length, letters, symbols, numbers, and case sensitivity. Built with JavaScript and localStorage for data persistent</p>
                     <a id="password-generator-link" href="https://github.com/dannytechstudio/Vanilla-JS-Password-Generator.git">View Project</a>
