--- a/index.html
+++ b/index.html
@@ -139,29 +139,44 @@
             <p class="description">You're welcome to explore some of my early-stage personal projects. Additional works are currently in development.</p>
             <div class="article-container">
                 <article>
-                    <h3>Personal portfolio website</h3>
-                    <p>A sleek and modern portfolio website showcasing my skills, projects, and experience in web development. Featuring a responsive design, interactive elements, and easy navigation to highlight my work, technical expertise, and contact information.</p>
-                    <a id="portfolio-link" href="https://www.dannytechstudio.com">View Project</a>
+                    <img src="images/Portfolio different screen views.png" alt="Portfolio website on different screen views">
+                    <div class="project-description-wrapper">
+                        <h3>Personal portfolio website</h3>
+                        <p>A sleek and modern portfolio website showcasing my skills, projects, and experience in web development. Featuring a responsive design, interactive elements, and easy navigation to highlight my work, technical expertise, and contact information.</p>
+                        <a id="portfolio-link" href="https://www.dannytechstudio.com">View Project</a>
+                    </div>
                 </article>
                 <article>
-                    <h3>Password Generator</h3>
-                    <p>A customizable password generator that allows users to create strong, secure passwords based on selected criteria like length, letters, symbols, numbers, and case sensitivity. Built with JavaScript and localStorage for data persistent</p>
-                    <a id="password-generator-link" href="https://github.com/dannytechstudio/Vanilla-JS-Password-Generator.git">View Project</a>
+                    <img src="images/Password generator different screen views.png" alt="Password generator on different screen views">
+                    <div class="project-description-wrapper">
+                        <h3>Password Generator</h3>
+                        <p>A customizable password generator that allows users to create strong, secure passwords based on selected criteria like length, letters, symbols, numbers, and case sensitivity. Built with JavaScript and localStorage for data persistent</p>
+                        <a id="password-generator-link" href="https://github.com/dannytechstudio/Vanilla-JS-Password-Generator.git">View Project</a>
+                    </div>
                 </article>
                 <article>
-                    <h3>Text Analyzer</h3>
-                    <p>A utility that analyzes user-inputted text to provide word and character count, reading time estimate, and insights into sentence structure — ideal for writers and editors.</p>
-                    <a id="text-analyzer-link" href="https://dannytechstudio.github.io/Vanilla-JS-Text-Analyzer/">View Project</a>
+                    <img src="images/Text analyzer different screen views.png" alt="Text analyzer on different screen views">
+                    <div class="project-description-wrapper">
+                        <h3>Text Analyzer</h3>
+                        <p>A utility that analyzes user-inputted text to provide word and character count, reading time estimate, and insights into sentence structure — ideal for writers and editors.</p>
+                        <a id="text-analyzer-link" href="https://dannytechstudio.github.io/Vanilla-JS-Text-Analyzer/">View Project</a>
+                    </div>
                 </article>
                 <article>
-                    <h3>Budget Calculator</h3>
-                    <p>An interactive tool that helps users allocate their income into needs, wants, and savings based on the 50:30:20 budgeting rule, offering a clear and practical overview for responsible financial planning.</p>
-                    <a id="budget-calculator-link" href="https://github.io/dannytechstudio/Vanilla-JavaScript--Budget-Calculator/">View Project</a>
+                    <img src="images/Budget Calc mobile view.png" alt="Budget calculator on mobile view">
+                    <div class="project-description-wrapper">
+                        <h3>Budget Calculator</h3>
+                        <p>An interactive tool that helps users allocate their income into needs, wants, and savings based on the 50:30:20 budgeting rule, offering a clear and practical overview for responsible financial planning.</p>
+                        <a id="budget-calculator-link" href="https://github.io/dannytechstudio/Vanilla-JavaScript--Budget-Calculator/">View Project</a>
+                    </div>
                 </article>
                 <article>
-                    <h3>Basic Calculator</h3>
-                    <p>A simple yet functional calculator that performs standard arithmetic operations, designed with a clean user interface and responsive layout using HTML, CSS, and JavaScript.</p>
-                    <a id="basic-calculator-link" href="https://dannytechstudio.github.io/Vanilla-JavaScript-Basic-Calculator/">View Project</a>
+                    <img src="images/Basic Calculator mobile view.png" alt="Basic Calculator on mobile view">
+                    <div class="project-description-wrapper">
+                        <h3>Basic Calculator</h3>
+                        <p>A simple yet functional calculator that performs standard arithmetic operations, designed with a clean user interface and responsive layout using HTML, CSS, and JavaScript.</p>
+                        <a id="basic-calculator-link" href="https://dannytechstudio.github.io/Vanilla-JavaScript-Basic-Calculator/">View Project</a>
+                    </div>
                 </article>
             </div>
         </section>
