Project descriptions modified

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                     <img src="images/Portfolio different screen views.png" alt="Portfolio website on different screen views">
                     <div class="project-description-wrapper">
                         <h3>Personal portfolio website</h3>
-                        <p>A sleek and modern portfolio website showcasing my skills, projects, and experience in web development. Featuring a responsive design, interactive elements, and easy navigation to highlight my work, technical expertise, and contact information.</p>
+                        <p>A modern portfolio website highlighting my web development skills, featuring responsive design, interactive UI, smooth navigation, and detailed sections for projects, experience, expertise, and contact for collaboration or inquiries.</p>
                         <a id="portfolio-link" href="https://www.dannytechstudio.com">View Project</a>
                     </div>
                 </article>
@@ -150,7 +150,7 @@
                     <img src="images/Password generator different screen views.png" alt="Password generator on different screen views">
                     <div class="project-description-wrapper">
                         <h3>Password Generator</h3>
-                        <p>A customizable password generator that allows users to create strong, secure passwords based on selected criteria like length, letters, symbols, numbers, and case sensitivity. Built with JavaScript and localStorage for data persistent</p>
+                        <p>A flexible password generator built with JavaScript that creates secure passwords based on user-defined criteria like length, characters, and case. Uses localStorage to ensure persistent access and easy management.</p>
                         <a id="password-generator-link" href="https://github.com/dannytechstudio/Vanilla-JS-Password-Generator.git">View Project</a>
                     </div>
                 </article>
@@ -158,7 +158,7 @@
                     <img src="images/Text analyzer different screen views.png" alt="Text analyzer on different screen views">
                     <div class="project-description-wrapper">
                         <h3>Text Analyzer</h3>
-                        <p>A utility that analyzes user-inputted text to provide word and character count, reading time estimate, and insights into sentence structure — ideal for writers and editors.</p>
+                        <p>A text analysis tool providing word and character count, estimated reading time, and sentence structure breakdown—perfect for writers, editors, and content creators seeking clarity and efficiency in their writing.</p>
                         <a id="text-analyzer-link" href="https://dannytechstudio.github.io/Vanilla-JS-Text-Analyzer/">View Project</a>
                     </div>
                 </article>
@@ -166,7 +166,7 @@
                     <img src="images/Budget Calc mobile view.png" alt="Budget calculator on mobile view">
                     <div class="project-description-wrapper">
                         <h3>Budget Calculator</h3>
-                        <p>An interactive tool that helps users allocate their income into needs, wants, and savings based on the 50:30:20 budgeting rule, offering a clear and practical overview for responsible financial planning.</p>
+                        <p>An intuitive budgeting tool applying the 50:30:20 rule to help users manage income wisely by distributing earnings into needs, wants, and savings, offering visual insights for better financial planning.</p>
                         <a id="budget-calculator-link" href="https://github.io/dannytechstudio/Vanilla-JavaScript--Budget-Calculator/">View Project</a>
                     </div>
                 </article>
