Project card styles modified

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                     </div>
                 </article>
                 <article>
-                    <img src="images/Budget Calc mobile view.png" alt="Budget calculator on mobile view">
+                    <img src="images/Budget Calculator different screen views.png" alt="Budget calculator on different screen views">
                     <div class="project-description-wrapper">
                         <h3>Budget Calculator</h3>
                         <p>An intuitive budgeting tool applying the 50:30:20 rule to help users manage income wisely by distributing earnings into needs, wants, and savings, offering visual insights for better financial planning.</p>
@@ -171,7 +171,7 @@
                     </div>
                 </article>
                 <article>
-                    <img src="images/Basic Calculator mobile view.png" alt="Basic Calculator on mobile view">
+                    <img src="images/Basic calculator different screen views.png" alt="Basic Calculator on different screen views">
                     <div class="project-description-wrapper">
                         <h3>Basic Calculator</h3>
                         <p>A simple yet functional calculator that performs standard arithmetic operations, designed with a clean user interface and responsive layout using HTML, CSS, and JavaScript.</p>
