--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
         <!-- Portfolio / Projects -->
         <section id="portfolio">
-            <h2>Projects / portfolio</h2>
+            <h2>Projects / Portfolio</h2>
             <p class="description">You're welcome to explore some of my early-stage personal projects. Additional works are currently in development.</p>
             <div class="article-container">
                 <article>
