Added some form interactivities

--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
             </div>
             <div class="elevator-pitch-video-container">
                 <div class="sub-container">
-                    <h3>Elevator Pitch</h3>
+                    <h3>Elevator Pitch Video</h3>
                     <p>In this short elevator pitch video, I introduce who I am, what I do, and the value I bring as a developer — all in under few minutes. It's a quick glimpse into my skills, mindset, and what drives me to create meaningful digital solutions.</p>
                 </div>
-                <video src="" id="elevator-pitch-video" controls></video>
+                <video src="Elevator pitch video.mp4" id="elevator-pitch-video" controls></video>
             </div>
         </section>
     
@@ -224,7 +224,7 @@
                         <label for="message">Message:</label>
                         <textarea id="message" name="message" placeholder="Enter your message" required></textarea>
                     </div>
-        
+                    <div class="modal"></div>
                     <button id="send-btn" type="submit">Send message</button>
                 </form>
             </div>
