--- a/index.html
+++ b/index.html
@@ -148,11 +148,11 @@
                     </div>
                 </article>
                 <article>
-                    <img src="images/Password generator different screen views.png" alt="Password generator on different screen views">
+                    <img src="images/PassVault desktop and mobile screen views.png" alt="Password generator on different screen views">
                     <div class="project-description-wrapper">
-                        <h3>Password Generator</h3>
-                        <p>A flexible password generator built with JavaScript that creates secure passwords based on user-defined criteria like length, characters, and case. Uses localStorage to ensure persistent access and easy management.</p>
-                        <a id="password-generator-link" href="https://github.com/dannytechstudio/Vanilla-JS-Password-Generator.git">View Project</a>
+                        <h3>PassVault</h3>
+                        <p>A password manager web app built with HTML, CSS, and JavaScript. PassVault helps users generate strong passwords, check password strength, store and manage saved passwords, and toggle light/dark theme and security options like encryption with a master password. The app is fully responsive for both desktop and mobile devices.</p>
+                        <a id="password-generator-link" href="https://github.com/dannytechstudio/PassVault.git">View Project</a>
                     </div>
                 </article>
                 <article>
