Added some standard attritube to the project links

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     <div class="project-description-wrapper">
                         <h3>Personal portfolio website</h3>
                         <p>A modern portfolio website highlighting my web development skills, featuring responsive design, interactive UI, smooth navigation, and detailed sections for projects, experience, expertise, and contact for collaboration or inquiries.</p>
-                        <a id="portfolio-link" href="https://www.dannytechstudio.com">View Project</a>
+                        <a id="portfolio-link" target="_blank" rel="noopener noreferrer" href="https://www.dannytechstudio.com">View Project</a>
                     </div>
                 </article>
                 <article>
@@ -152,7 +152,7 @@
                     <div class="project-description-wrapper">
                         <h3>PassVault</h3>
                         <p>A password manager web app built with HTML, CSS, and JavaScript. PassVault helps users generate strong passwords, check password strength, store and manage saved passwords, and toggle light/dark theme and security options like encryption with a master password. The app is fully responsive for both desktop and mobile devices.</p>
-                        <a id="password-generator-link" href="https://github.com/dannytechstudio/PassVault.git">View Project</a>
+                        <a id="password-generator-link" target="_blank" rel="noopener noreferrer" href="https://github.com/dannytechstudio/PassVault.git">View Project</a>
                     </div>
                 </article>
                 <article>
@@ -160,7 +160,7 @@
                     <div class="project-description-wrapper">
                         <h3>Text Analyzer</h3>
                         <p>A text analysis tool providing word and character count, estimated reading time, and sentence structure breakdown—perfect for writers, editors, and content creators seeking clarity and efficiency in their writing.</p>
-                        <a id="text-analyzer-link" href="https://dannytechstudio.github.io/Vanilla-JS-Text-Analyzer/">View Project</a>
+                        <a id="text-analyzer-link" target="_blank" rel="noopener noreferrer" href="https://dannytechstudio.github.io/Vanilla-JS-Text-Analyzer/">View Project</a>
                     </div>
                 </article>
                 <article>
@@ -176,7 +176,7 @@
                     <div class="project-description-wrapper">
                         <h3>Basic Calculator</h3>
                         <p>A simple yet functional calculator that performs standard arithmetic operations, designed with a clean user interface and responsive layout using HTML, CSS, and JavaScript.</p>
-                        <a id="basic-calculator-link" href="https://dannytechstudio.github.io/Vanilla-JavaScript-Basic-Calculator/">View Project</a>
+                        <a id="basic-calculator-link" target="_blank" href="https://dannytechstudio.github.io/Vanilla-JavaScript-Basic-Calculator/">View Project</a>
                     </div>
                 </article>
             </div>
